# ghc-rts-data-layout-experiment

./: Capability.c.o_i  Capability.c.p_o_i  Capability.c.thr_debug_p_o_i  Main.hs  README.md  a.c  a.h  c.sh  fallback_decls.h  gen-rts-globvar-list.sh  ghc-rts-data-layout-experiment.cabal  notes  rts-global-vars.txt  rts-global-vars.txt-annotated  stack.yaml  traverse.sh
